fixed spacing

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ body {
 }
 h1 {
   font-family: 'Krona One', sans-serif;
-  letter-spacing: 3px;
   font-weight: bold;
   color: #2B2D42;
   font-size: 36px;
